examples/test/testpolicy16916.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16916
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key42: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value41
          key8: value15
      podSelector:
        matchLabels:
          key4: value16
          key24: value25
